--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                                 <li><a href="https://www.amazonia.fiocruz.br/sistemas/sispic/projeto">Registrar Sugestão</a></li>
                                 <li><a href="https://www.amazonia.fiocruz.br/sistemas/sispic/declaracoes">Projetos Realizados</a></li>
                                 <li><a href="https://www.amazonia.fiocruz.br/sistemas/sispic/declaracoes">Contatos</a></li>
+                                <li><a href="projeto/index.php" style="color: orangered">Criar Logon</a></li>
                                 <li><a href="projeto/index.php" style="color: orangered">Fazer Login</a></li>
 
                             </ul>
