Mudanças nos links do menu e dos botões.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                         <a href="#menu" class="menuToggle"><span>Menu</span></a>
                         <div id="menu">
                             <ul>
-                                <li><a href="https://www.amazonia.fiocruz.br/sistemas/sispic/projeto">Registrar Sugestão</a></li>
-                                <li><a href="https://www.amazonia.fiocruz.br/sistemas/sispic/declaracoes">Projetos Realizados</a></li>
+                                <li><a href="projeto">Registrar Sugestão</a></li>
+                                <li><a href="declaracoes">Projetos Realizados</a></li>
                                 <li><a href="https://www.amazonia.fiocruz.br/sistemas/sispic/declaracoes">Contatos</a></li>
                                 <li><a href="projeto/index.php" style="color: orangered">Criar Logon</a></li>
                                 <li><a href="projeto/index.php" style="color: orangered">Fazer Login</a></li>
@@ -51,8 +51,8 @@
 
 
                 <ul class="actions special">
-                    <li><a href="https://www.amazonia.fiocruz.br/sistemas/sispic/projeto" class="button primary">Registrar Sugestão</a></li>
-                    <li><a href="https://www.amazonia.fiocruz.br/sistemas/sispic/declaracoes" class="button primary">Projetos Realizados</a></li>
+                    <li><a href="projeto" class="button primary">Registrar Sugestão</a></li>
+                    <li><a href="declaracoes" class="button primary">Projetos Realizados</a></li>
                     <li><a href="https://www.amazonia.fiocruz.br/sistemas/sispic/gestao" class="button primary">Contatos</a></li>
                 </ul>
 
